--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ image = "0.24"
 rand = "0.8"
 sdl2 = "0.35"
 anyhow = "1.0"
-nalgebra = "0.32"
+nalgebra = { version = "0.32", features = ["rand"] }
 
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
